--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^7.6.0",
     "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "module-alias": "^2.2.2",
     "moment": "^2.29.1",
     "mongoose": "5.10.18",
