--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "random-int": "^2.0.1",
     "telegraf": "^4.3.0",
     "telegraf-i18n": "^6.6.0",
+    "telegraf-logger": "^3.0.0",
     "typescript": "^4.2.3"
   },
   "_moduleAliases": {
